fix: change paths for internal endpoints
